Changed CSS and added "target="_blank"" to <a>

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             margin: 0 auto;
             border-radius: 10px; /* Roundness */
             background-color: white; /* Background colour */
+            border-radius: 18px;
             padding: 7px 5px;
             /* border: 5px solid #a8a8a8; Border */
         }
@@ -114,9 +115,9 @@
         <h2>My personal website is currently under construction.</h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>15%</h3></div></div></div>
         <div class="links">
-            <a href="mailto:damiano@nicolussi.dev"><ion-icon name="mail"></ion-icon></a>
-            <a href="https://github.com/damnicolussi"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/damiano-nicolussi"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="mailto:damiano@nicolussi.dev" target="_blank"><ion-icon name="mail"></ion-icon></a>
+            <a href="https://github.com/damnicolussi" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/damiano-nicolussi" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
         </div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
