--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             color: #7189A1;
         }
 
+        .footer{
+            margin-top: 40px;
+            font-size: 0.8em;
+        }
+
         /* Fades in animation */
         @keyframes fadein  {
             from { opacity: 0; }
@@ -92,6 +97,9 @@
             }
             #progress {
                 width: 80%; /* Bar width */
+            }
+            .footer{
+                font-size: 0.6em;
             }
         }
     </style>
