Update Javascript Title Changing

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
             dots++;
             if (dots > 4){
                 document.title = "nicolussi.dev";
-                setInterval(() => {dots = 0;}, 1500);
+                setInterval(() => {}, 2500);
+                dots = 0;
             }
-        }, 1000);
+        }, 1200);
     </script>
 </head>
 <body>
