--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             document.title = "Coming Soon" + ".".repeat(dots);
             dots++;
             if (dots > 4){
-                document.title = "nicolussi.dev";
+                var domain = exec(window.location.hostname);
+                document.title = domain;
                 setInterval(() => {}, 2500);
                 dots = 0;
             }
@@ -121,7 +122,7 @@
     <div id="main">
         <img src="logo.png" alt="Logo Image">
         <h1>Hi, I'm <b>Damiano Nicolussi</b></h1>
-        <h2>My personal website is currently under construction.</h2>
+        <h2>This website is currently under construction.</h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>90%</h3></div></div></div>
         <div class="links">
             <a href="mailto:damiano@nicolussi.dev" target="_blank"><ion-icon name="mail"></ion-icon></a>
