--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
     </style>
     <link rel="icon" type="image/png" href="/logo.png">
     <script>
+        let domain = exec(window.location.hostname);
         let dots = 0;
         setInterval(() => {
             document.title = "Coming Soon" + ".".repeat(dots);
             dots++;
             if (dots > 4){
-                var domain = exec(window.location.hostname);
                 document.title = domain;
                 setInterval(() => {}, 2500);
                 dots = 0;
