--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </style>
     <link rel="icon" type="image/png" href="/logo.png">
     <script>
-        var domain = exec(window.location.hostname);
+        var domain = window.location.hostname;
         let dots = 0;
         setInterval(() => {
             document.title = "Coming Soon" + ".".repeat(dots);
