--- a/iro_group/index.html
+++ b/iro_group/index.html
@@ -221,7 +221,7 @@
                             <button type="button" class="btn btn-secondary"><img src="images/placeholder.png" alt="placeholder" style="width: 16px; height: 16px;"></button>
                         </div>
                         <div class="col text-center d-flex flex-column">
-                            <label class="fs-6"><i class="bi bi-exclamation-triangle-fill"></i> < 0.077 mL</label>
+                            <label class="fs-6 text-danger"><i class="bi bi-exclamation-triangle-fill"></i> < 0.077 mL</label>
                             <button type="button" class="btn btn-secondary"><img src="images/placeholder.png" alt="placeholder" style="width: 16px; height: 16px;"></button>
                         </div>
                     </div>  
