--- a/iro_group/index.html
+++ b/iro_group/index.html
@@ -13,7 +13,7 @@
           <img src="images/logos/logo.png" alt="Iro Group Logo"/>
         </header>
       
-        <main class="bg-dark-subtle py-3" style="width: 1000px; height: 560px;">
+        <main class="container bg-dark-subtle py-3" style="width: 1000px; height: 560px;">
             <div class="container text-center">
                 <div class="row px-4">
                     <div class="col-sm-9">
