--- a/iro_group/test_modal.html
+++ b/iro_group/test_modal.html
@@ -7,93 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
-<body class="vh-100">
+<body class="vh-100 d-flex align-items-center">
 
-    <div class="container d-flex flex-column justify-content-center align-items-center w-100 h-100">
-    <h1 class="text-center">Iro Group</h1>
-    <h2 class="text-center">Client-server migration</h2>
-    <p class="text-center">v 1.0</p>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page1.html'">
-                    Page 1
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page2.html'">
-                    Page 2
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page3.html'">
-                    Page 3
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page4.html'">
-                    Page 4
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page5.html'">
-                    Page 5
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page6.html'">
-                    Page 6
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page7.html'">
-                    Page 7
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page8.html'">
-                    Page 8
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page9.html'">
-                    Page 9
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page10.html'">
-                    Page 10
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page11.html'">
-                    Page 11
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page12.html'">
-                    Page 12
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page13.html'">
-                    Page 13
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page14.html'">
-                    Page 14
-                </button>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 mb-3">
-                <button type="button" class="btn btn-primary w-100" onclick="window.location.href='page15.html'">
-                    Page 15
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <div class="container d-flex justify-content-center mt-5">
+    <div class="container d-flex justify-content-center">
         <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#saveModal">
             MODAL 1
         </button>
@@ -114,7 +30,7 @@
             MODAL 5
         </button>
     </div>
-    </div>
+
 
     <!-- MODAL ONE -->
     <div class="modal fade" id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="saveModal" aria-hidden="true">
