--- a/iro_group/page7.html
+++ b/iro_group/page7.html
@@ -248,7 +248,7 @@
         <!-- FOOTER -->
 
       
-        <div class="container bg-dark-subtle d-flex flex-column justify-content-center" style="width: 1000px; height: 132px;">
+        <div class="container bg-dark-subtle d-flex flex-column justify-content-center footer__cnt">
                 <footer class="d-flex flex-wrap align-items-end justify-content-center justify-content-md-between mb-1 px-3">
                   <div class="col-md-3"></div>
             
